<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/close_imgview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="16dp"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/signup_header_text"
        android:textColor="@color/colortext"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/signup_email_edittxt"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/signup_emailEditrxt_text"
        android:textColorHint="@color/colortextHint" />

    <EditText
        android:id="@+id/signup_password_edittxt"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/signup_passwordEditrxt_text"
        android:inputType="numberPassword"
        android:textColorHint="@color/colortextHint" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:gravity="center"
        android:text="@string/signup_footer_text"
        android:textColor="@color/colortext"
         />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="315dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:background="@color/colorbtnBackground"
        android:text="@string/nextmain2_signup_btn"
        android:textColor="@color/btn_text_color"
        android:textSize="16sp" />

</LinearLayout>