<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:id="@+id/parentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/login_signup_txtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/nextmain2_signup_btn"
            android:textColor="@color/colortextHint"/>

        <ImageView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_close_black_24dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/login_welcome"
        android:textColor="@color/colortext"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/login_enterEmail"
        android:textColorHint="@color/colortextHint" />

    <EditText
        android:id="@+id/login_passowrd"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/login_enterPassword"
        android:inputType="numberPassword"
        android:textColorHint="@color/colortextHint" />


    <TextView
        android:id="@+id/forget_password_txtview"
        android:layout_width="wrap_content"
        android:layout_height="119dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="16dp"
        android:text="@string/forget_password"
        android:textColor="@color/colortext"
        android:textSize="12sp" />

    <Button
        android:id="@+id/login_signinBtn"
        android:layout_width="315dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:background="@color/colorbtnBackground"
        android:text="@string/signup_signIn_txt"
        android:textColor="@color/btn_text_color"
        android:textSize="16sp" />

</LinearLayout>