<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetpassword"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colortext"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enter_email"
        android:textColor="@color/colortext"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/email_edittxt"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_email_edittxt"
        android:textColorHint="@color/colortextHint" />

    <!-- what does this text view do in this activity -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/colortext"
        android:textSize="12sp" />

    <Button
        android:id="@+id/recover_password_btn"
        android:layout_width="315dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:background="@color/colorbtnBackground"
        android:text="@string/recover_password"
        android:textColor="@color/btn_text_color"
        android:textSize="16sp" />

</LinearLayout>