<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".next_main2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@mipmap/back"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/image2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="48dp"
            app:srcCompat="@mipmap/collbook_foreground" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="14dp"
            android:layout_marginTop="36dp"
            android:gravity="center_horizontal"
            android:text="@string/main_title"
            android:textColor="@color/colorbtnBackground"
            android:textSize="26sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48sp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="36dp"
            android:gravity="center"
            android:text="@string/main_description"
            android:textSize="18sp" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24sp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorbtnBackground"
            android:text="@string/nextmain2_signin_btn"
            android:textColor="@color/btn_text_color" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@color/btn_text_color"
            android:text="@string/nextmain2_signup_btn"
            android:textColor="@color/colortext" />


    </LinearLayout>

</LinearLayout>
