<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".next_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@mipmap/back"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="match_parent"
            android:layout_height="290sp"
            android:layout_gravity="end"
            android:layout_marginTop="72sp"
            android:foregroundGravity="center"
            app:srcCompat="@mipmap/collbook_foreground" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="14sp"
            android:layout_marginTop="48sp"
            android:gravity="center_horizontal"
            android:text="@string/nextmain_header"
            android:textColor="@color/colorbtnBackground"
            android:textSize="26sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48sp"
            android:layout_marginTop="48sp"
            android:layout_marginEnd="36sp"
            android:gravity="center"
            android:text="@string/nextmain_description"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="48sp"
            android:orientation="horizontal"
            android:paddingTop="14sp"
            android:paddingBottom="14sp">

            <TextView
                android:id="@+id/next_main_skipbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18sp"
                android:layout_marginEnd="88sp"
                android:text="@string/main_skip"
                android:textSize="18sp" />

            <Button
                android:layout_width="10sp"
                android:layout_height="10sp"
                android:layout_marginStart="48sp"
                android:background="@color/colortextHint" />


            <Button
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="4sp"
                android:layout_marginEnd="48sp"
                android:background="@color/colorbtnBackground"/>

            <Button
                android:id="@+id/next2"
                android:layout_width="56sp"
                android:layout_height="28sp"
                android:layout_marginStart="72sp"
                android:background="@color/colorbtnBackground"
                android:gravity="end"
                android:paddingEnd="4sp"
                android:text="@string/main_btn_next"
                android:textColor="@color/btn_text_color"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>