<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@mipmap/back"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/back_round" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="14sp"
            android:layout_marginTop="36sp"
            android:gravity="center_horizontal"
            android:text="@string/main_title"
            android:textColor="@color/colorbtnBackground"
            android:textSize="26sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48sp"
            android:layout_marginTop="48sp"
            android:layout_marginEnd="36sp"
            android:gravity="center"
            android:text="@string/main_description"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="48sp"
            android:orientation="horizontal"
            android:paddingTop="14sp">

            <TextView
                android:id="@+id/skipbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18sp"
                android:layout_marginEnd="88sp"
                android:text="@string/main_skip"
                android:textSize="18sp"
                android:textColor="@color/colortextHint"/>

            <Button
                android:id="@+id/next1btn"
                android:layout_width="10sp"
                android:layout_height="10sp"
                android:layout_marginStart="48sp"
                android:background="@color/colorbtnBackground" />

            <Button
                android:id="@+id/next2btn"
                android:layout_width="10sp"
                android:layout_height="10sp"
                android:layout_marginStart="4sp"
                android:layout_marginEnd="48sp"
                android:background="@color/colortextHint"
                android:textColor="@color/colorbtnBackground" />

            <Button
                android:id="@+id/next"
                android:layout_width="56sp"
                android:layout_height="28sp"
                android:layout_marginStart="72sp"
                android:background="@color/colorbtnBackground"
                android:gravity="end"
                android:paddingEnd="4sp"
                android:text="@string/main_btn_next"
                android:textColor="@color/btn_text_color"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>